Fixed invisible Facebook button.

--- a/css/style.css
+++ b/css/style.css
@@ -283,10 +283,6 @@ h6 {
 	display: inline-block;
 }
 
-.social span {
-	display: none;
-}
-
 .hide {
 	display: none;	
 }
